generic table styling

--- a/PvPGNSite/src/app/generics/generic-table/generic-table.component.html
+++ b/PvPGNSite/src/app/generics/generic-table/generic-table.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       {{config.headerText}}
-      <table>
+      <table class="table table-bordered table-hover">
         <thead>
           <tr>
             <th *ngFor="let column of config.columns">
